# jse-orignal

./: .gitignore  LICENSE  README.md  README_cn.md
.claude/: settings.local.json
.metals/: metals.lock.db  metals.mv.db
.metals/.reports/metals-full/2026-03-11/: r_empty-definition_(jse4j)_22-35-34-680.md  r_empty-definition_(jse4j)_22-51-16-827.md  r_empty-definition_(jse4j)_22-56-22-038.md  r_empty-definition_(jse4j)_22-59-35-076.md  r_empty-definition_(jse4j)_23-01-43-591.md  r_empty-definition_(jse4j)_23-03-06-765.md  r_qdox-error_(jse4j)_20-55-13-587.md  r_qdox-error_(jse4j)_22-38-48-142.md  (+2 more)
csharp/: .gitignore  README.md  TESTING.md
csharp/Jse/: Jse.csproj
csharp/Jse.Tests/: Jse.Tests.csproj  JseEngineTests.cs  JseStressTests.cs  JsonValueExtensions.cs
csharp/Jse/Execution/: ExpressionCompiler.cs
csharp/Jse/Parser/: JseParser.cs
csharp/Jse/Runtime/: JseEngine.cs  OperatorBinding.cs  OperatorEnvironment.cs  OperatorRegistry.cs  OperatorSettings.cs  RuntimeCallable.cs  RuntimeContext.cs  RuntimeScope.cs
csharp/Jse/Serialization/: JseCsharpOperatorExpressionCodec.cs  JseCsharpOperatorNodes.cs  JseRuntimeSerializer.cs
csharp/Jse/Utils/: JsonHelpers.cs
docs/: JSE_for_AI_Agents.md  JSE_paper.md
gojse/: README.md
java/: pom.xml
moonbit/: moon.mod.json
moonbit/_build/: packages.json
python/: README.md  pyproject.toml
python/pyjse/ast/: nodes.py  parser.py
python/pyjse/functors/: builtin.py  sql.py  utils.py
python/tests/: test_query.py
rust/: Cargo.toml  README.md
rust/src/: engine.rs  env.rs  lib.rs  sql.rs
rust/src/ast/: mod.rs  nodes.rs  parser.rs
rust/src/functors/: builtin.rs  lisp.rs  mod.rs  sql.rs  utils.rs
rust/tests/: basic.rs  logic.rs  query.rs
src/csharp/: Jse.CSharp.sln  README.md
src/csharp/Jse/: Jse.csproj
src/csharp/Jse.Tests/: Jse.Tests.csproj  JseEngineTests.cs
typescript/: package.json
typescript/src/: engine.ts  env.ts  index.ts  types.ts
typescript/src/__tests__/: logic.test.ts  query.test.ts
typescript/src/ast/: base.ts  nodes.ts  parser.ts
typescript/src/functors/: builtin.ts  lisp.ts  sql.ts  utils.ts
(+32 files in other folders)
